eks-alb/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellojs
  template:
    metadata:
      labels:
        app: hellojs
    spec:
      containers:
      - name: hellojs
        image: mvijay/hellojs_app
        ports:
          - name: http
            containerPort: 3000
