eks-alb/hello-new-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-gw-svc
  labels:
    app: hellojs
    service: hellojs-svc
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: hellojs
