eks-alb/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc 
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
  selector:
    app: hellojs
