eks-alb/hellojs.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellojs
  labels:
    app: hellojs
    service: hellojs
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: hellojs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellojs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellojs
  template:
    metadata:
      labels:
        app: hellojs
    spec:
      containers:
      - name: hellojs
        image: mvijay/hellojs_app
        ports:
          - name: http
            containerPort: 3000
