eks-alb/hello-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hellojs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hellojs
spec:
  hosts:
  - "*"
  gateways:
  - hellojs-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-app
        port:
          number: 3000
