eks-alb/hellojs-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hellojs
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hellojs
spec:
  hosts:
  - "*"
  gateways:
  - hellojs
  http:
  - match:
    - uri:
        exact: /api
    route:
    - destination:
        host: hellojs
        port:
          number: 3000
